kubernetes/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    component: web
spec:
  containers:
    - name: client
      image: rahuldhiman93/quiklink-prod
      ports:
        - containerPort: 8080
